k8s/labs/chat-microservices/k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend-svc
  namespace: chat-lab
spec:
  selector:
    app: chat-frontend
  ports:
  - port: 80
    targetPort: 80
